// Generated by generate_state_machine_cpp.py from state_machine.puml
// DO NOT EDIT MANUALLY.

#include "state_machine_generated.h"

namespace app {

void StateMachine::dispatch(Event event, Context& ctx) {
    switch (state_) {
    case State::Error_Display:
        if (event == Event::evReboot && guard_reboot_available(ctx)) {
            reboot();
            state_ = State::Halted;
        }
        break;
    case State::Error_Touch:
        if (event == Event::evReboot && guard_reboot_available(ctx)) {
            reboot();
            state_ = State::Halted;
        }
        break;
    case State::Flipping:
        if (event == Event::evFlipComplete && guard_esp_random_ok(ctx)) {
            coin_flip_ui_set_result_log_coin_result();
            state_ = State::ResultShown;
        }
        break;
    case State::Halted:
        break;
    case State::InitDisplay:
        if (event == Event::evDisplayOk && guard_TFT_eSPI_present(ctx)) {
            init_tft();
            state_ = State::InitTouch;
        } else if (event == Event::evDisplayFail && guard_TFT_eSPI_missing_or_not_display_ok(ctx)) {
            on_display_init_failed();
            state_ = State::Error_Display;
        }
        break;
    case State::InitTouch:
        if (event == Event::evTouchOk && guard_XPT2046_present(ctx)) {
            ui_create();
            state_ = State::Ready;
        } else if (event == Event::evTouchFail && guard_XPT2046_missing_or_not_touch_ok(ctx)) {
            on_touch_init_failed();
            state_ = State::Error_Touch;
        }
        break;
    case State::Initializing:
        if (event == Event::evSerialOk && guard_serial_required(ctx)) {
            init_serial();
            state_ = State::InitDisplay;
        }
        break;
    case State::Ready:
        if (event == Event::evButtonClick && guard_btnFlip_enabled(ctx)) {
            on_flip_button_clicked();
            state_ = State::Flipping;
        } else if (event == Event::evDisplayFail && guard_runtime_display_fail(ctx)) {
            on_display_init_failed();
            state_ = State::Error_Display;
        } else if (event == Event::evTouchFail && guard_runtime_touch_fail(ctx)) {
            on_touch_init_failed();
            state_ = State::Error_Touch;
        }
        break;
    case State::ResultShown:
        if (event == Event::evButtonClick && guard_btnFlip_enabled(ctx)) {
            on_flip_button_clicked();
            state_ = State::Flipping;
        } else if (event == Event::evReset && guard_ui_ready(ctx)) {
            ui_set_result_Tap_Flip();
            state_ = State::Ready;
        }
        break;
    default:
        break;
    }
}

} // namespace app
